--- a/modules/markaspot_feedback/config/optional/markaspot_feedback.settings.yml
+++ b/modules/markaspot_feedback/config/optional/markaspot_feedback.settings.yml
@@ -1,11 +1,12 @@
 tax_status: service_status
 enable: 1
 cron_enable: 1
-status_resubmissive:
+feedback_eligible_statuses:
   5: '5'
 set_status_note: 'Die/der Bürger:in hat einen zusätzlichen Kommentar über die Feedback-Funktion hinterlassen.'
 set_status_term:
   4: '4'
 days: '42'
 mailtext: "Hallo,\r\n\r\nvor ein paar Wochen haben sie unter dieser E-Mail-Adresse das Anliegen\r\n[node:request_id] auf dem Mängelmelder der Stadt Bonn erstellt. Dieses Anliegen ist\r\nbei uns im System als erledigt vermerkt und wird jetzt archiviert. Wir\r\nmöchten Ihnen die Gelegenheit geben, die Angelegenheit noch einmal auf\r\nmöglichen Handlungsbedarf zu überprüfen oder uns ein allgemeines Feedback\r\nzu geben.\r\n\r\n[site:url]requests/[node:request_id]\r\n\r\nWenn Sie der Auffassung sind, dass wir in dieser Angelegenheit noch einmal\r\ntätig werden sollen, haben Sie zusätzlich die Möglichkeit, das Anliegen\r\nnoch einmal zu öffnen.\r\nKlicken Sie einfach auf den folgenden Link:\r\n\r\n[site:url]feedback/[node:uuid]"
+mail_subject: 'Ihre Meldung [node:request_id] auf dem Mängelmelder: Feedback willkommen'
 interval: '60'
