Update Mark-a-Spot UI module to work with Gin theme and Gin Toolbar

--- a/modules/markaspot_ui/markaspot_ui.info.yml
+++ b/modules/markaspot_ui/markaspot_ui.info.yml
@@ -1,7 +1,8 @@
-name: Markaspot UI module
+name: 'Mark-a-Spot UI'
 type: module
-description: 'UI and Menubar for the Mark-a-Spot Distro'
-package: Mark-a-Spot
-
+description: 'Provides a toolbar integration and central management interface for Mark-a-Spot modules.'
 core_version_requirement: ^10 || ^11
-
+package: 'Mark-a-Spot'
+dependencies:
+  - drupal:toolbar
+  - drupal:system
