--- a/modules/markaspot_open311/markaspot_open311.services.yml
+++ b/modules/markaspot_open311/markaspot_open311.services.yml
@@ -6,7 +6,7 @@ services:
 
   markaspot_open311.handler.georeport_request:
     class: Drupal\markaspot_open311\GeoreportRequestHandler
-    arguments: ['@path.current']
+    arguments: ['@serializer', '@path.current']
 
   markaspot_open311.serializer.encoder.form:
     class: Drupal\markaspot_open311\Encoder\Open311Encoder
