chore: update gin theme and module releases for 11.2 compatbility

--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,9 @@
         "oomphinc/composer-installers-extender": "^2",
         "composer/installers": "^2",
         "anthonymartin/geo-location": "^1.0",
+        "drupal/gin": "^5",
+        "drupal/gin_login": "^2.1",
+        "drupal/gin_toolbar": "^3",
         "drupal/address": "~2",
         "drupal/pathauto": "^1",
         "drupal/restui": "^1",
