feat: introduce new token for use as site:url replacement in mails to citizens

--- a/modules/markaspot_nuxt/markaspot_nuxt.routing.yml
+++ b/modules/markaspot_nuxt/markaspot_nuxt.routing.yml
@@ -1,3 +1,10 @@
+markaspot_nuxt.settings:
+  path: '/admin/structure/markaspot/nuxt/settings'
+  defaults:
+    _form: '\Drupal\markaspot_nuxt\Form\MarkaspotNuxtSettingsForm'
+    _title: 'Nuxt Frontend settings'
+  requirements:
+    _permission: 'administer site configuration'
 markaspot_nuxt.form_mode_settings:
   path: '/api/mark-a-spot-form-mode-settings/{entity_type}/{bundle}/{form_mode}'
   defaults:
