feat (ui): restore user and markaspot links in gin newest layout

--- a/modules/markaspot_ui/markaspot_ui.libraries.yml
+++ b/modules/markaspot_ui/markaspot_ui.libraries.yml
@@ -1,11 +1,12 @@
 toolbar:
   version: VERSION
   css:
-    component:
-      css/markaspot-toolbar.css: {}
+    theme:
+      css/markaspot-toolbar.css: { weight: 100 }
   dependencies:
     - core/drupal
     - core/drupalSettings
+    - gin/gin
 
 settings:
   version: VERSION
