--- a/modules/markaspot_resubmission/markaspot_resubmission.services.yml
+++ b/modules/markaspot_resubmission/markaspot_resubmission.services.yml
@@ -1,4 +1,10 @@
 services:
+  logger.channel.markaspot_resubmission:
+    parent: logger.channel_base
+    arguments: ['markaspot_resubmission']
+  markaspot_resubmission.reminder_manager:
+    class: Drupal\markaspot_resubmission\ReminderManager
+    arguments: ['@entity_type.manager', '@config.factory', '@logger.channel.markaspot_resubmission', '@datetime.time']
   markaspot_resubmission.resubmission:
     class: Drupal\markaspot_resubmission\ResubmissionService
-    arguments: ['@entity_type.manager', '@config.factory']
+    arguments: ['@entity_type.manager', '@config.factory', '@markaspot_resubmission.reminder_manager']
