refactor:  replace ECA with EventSubscriber for email sending in resubmission module

--- a/modules/markaspot_resubmission/markaspot_resubmission.services.yml
+++ b/modules/markaspot_resubmission/markaspot_resubmission.services.yml
@@ -8,3 +8,8 @@ services:
   markaspot_resubmission.resubmission:
     class: Drupal\markaspot_resubmission\ResubmissionService
     arguments: ['@entity_type.manager', '@config.factory', '@markaspot_resubmission.reminder_manager']
+  markaspot_resubmission.reminder_subscriber:
+    class: Drupal\markaspot_resubmission\EventSubscriber\ResubmissionReminderSubscriber
+    arguments: ['@plugin.manager.mail', '@language_manager', '@logger.channel.markaspot_resubmission', '@token']
+    tags:
+      - { name: event_subscriber }
