Move maplibre libraries to asset-packagist

--- a/composer.json
+++ b/composer.json
@@ -13,30 +13,6 @@
     ],
     "repositories": [
         {
-            "type": "package",
-            "package": {
-                "name": "mapbox/mapbox-gl",
-                "type": "drupal-library",
-                "version": "3.0.0",
-                "dist": {
-                    "url": "https://github.com/markaspot/mark-a-spot/releases/download/10.6.0-beta.2/mapbox-gl.zip",
-                    "type": "zip"
-                }
-            }
-        },
-        {
-            "type": "package",
-            "package": {
-                "name": "maplibre/maplibre-gl",
-                "type": "drupal-library",
-                "version": "3.6.2",
-                "dist": {
-                    "url": "https://github.com/markaspot/mark-a-spot/releases/download/10.6.0-beta.2/maplibre-gl.zip",
-                    "type": "zip"
-                }
-            }
-        },
-        {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
         },
@@ -65,6 +41,8 @@
         "npm-asset/drmonty-leaflet-awesome-markers": "2.0.2",
         "npm-asset/mapbox-gl-leaflet": "^0.0.15",
         "npm-asset/maplibre--maplibre-gl-leaflet": "^0.0.20",
+        "npm-asset/maplibre-gl": "3.6.2",
+        "npm-asset/@mapbox/mapbox-gl": "3.0.0"
         "npm-asset/font-awesome": "^5",
         "npm-asset/axios": "^1",
         "npm-asset/caman": "^4.1",
@@ -110,6 +88,12 @@
             "npm-asset"
         ],
         "installer-paths": {
+            "web/libraries/maplibre-gl": [
+              "npm-asset/maplibre-gl"
+            ],
+            "web/libraries/mapbox-gl": [
+              "npm-asset/@mapbox/mapbox-gl"
+            ],
             "web/core": [
                 "type:drupal-core"
             ],
