--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "npm-asset/mapbox-gl-leaflet": "^0.0.15",
         "npm-asset/maplibre--maplibre-gl-leaflet": "^0.0.20",
         "npm-asset/maplibre-gl": "3.6.2",
-        "npm-asset/@mapbox/mapbox-gl": "3.0.0"
+        "npm-asset/@mapbox/mapbox-gl": "3.0.0",
         "npm-asset/font-awesome": "^5",
         "npm-asset/axios": "^1",
         "npm-asset/caman": "^4.1",
