--- a/composer.json
+++ b/composer.json
@@ -41,8 +41,8 @@
         "npm-asset/drmonty-leaflet-awesome-markers": "2.0.2",
         "npm-asset/mapbox-gl-leaflet": "^0.0.15",
         "npm-asset/maplibre--maplibre-gl-leaflet": "^0.0.20",
-        "npm-asset/maplibre-gl": "3.6.2",
-        "npm-asset/@mapbox/mapbox-gl": "3.0.0",
+        "npm-asset/maplibre-gl": "^5",
+        "npm-asset/mapbox-gl": "3.16.0-beta.2",
         "npm-asset/font-awesome": "^5",
         "npm-asset/axios": "^1",
         "npm-asset/caman": "^4.1",
