--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
         "npm-asset/mapbox-gl-leaflet": "^0.0.15",
         "npm-asset/maplibre--maplibre-gl-leaflet": "^0.0.20",
         "npm-asset/maplibre-gl": "^5",
-        "npm-asset/mapbox-gl": "3.16.0-beta.2",
+        "npm-asset/mapbox-gl": "3.11.0 as 3.16.0-beta.2",
         "npm-asset/font-awesome": "^5",
         "npm-asset/axios": "^1",
         "npm-asset/caman": "^4.1",
