--- a/composer.json
+++ b/composer.json
@@ -1,123 +1,159 @@
 {
-    "name": "drupal/markaspot",
-    "description": "Installation profile of the Mark-a-Spot D8 Distribution",
-    "type": "drupal-profile",
-    "license": "GPL-2.0-or-later",
-    "homepage": "https://github.com/markaspot/markaspot.git",
-    "authors": [
-        {
-            "name": "Holger Kreis (markaspot)",
-            "homepage": "https://www.drupal.org/u/markaspot",
-            "role": "Maintainer"
-        }
-    ],
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://packages.drupal.org/8"
-        },
-        {
-            "type": "composer",
-            "url": "https://asset-packagist.org"
-        }
-    ],
-    "require": {
-        "npm-asset/leaflet.locatecontrol": "^0.65",
-        "npm-asset/fontawesome-iconpicker": "^1.3",
-        "npm-asset/waypoints": "^4",
-        "npm-asset/iso8601-js-period": "^0.2",
-        "npm-asset/dateformat": "^5",
-        "npm-asset/lazysizes": "^5",
-        "npm-asset/leaflet": "1.7",
-        "npm-asset/leaflet.timeline": "^1.4",
-        "npm-asset/leaflet.heat": "^0.2.0",
-        "npm-asset/leaflet.markercluster": "^1.4",
-        "npm-asset/leaflet-fullscreen": "^1",
-        "npm-asset/leaflet-edgebuffer": "^1",
-        "npm-asset/leaflet-easybutton": "^2.4",
-        "npm-asset/leaflet-control-geocoder": "^1",
-        "npm-asset/leaflet-geosearch": "^3.6",
-        "npm-asset/mapbox--geojson-rewind": "^0.5.0",
-        "npm-asset/drmonty-leaflet-awesome-markers": "2.0.2",
-        "npm-asset/mapbox-gl-leaflet": "^0.0.15",
-        "npm-asset/maplibre--maplibre-gl-leaflet": "^0.0.20",
-        "npm-asset/maplibre-gl": "^5",
-        "npm-asset/mapbox-gl": "3.11.0 as 3.16.0-beta.2",
-        "npm-asset/font-awesome": "^5",
-        "npm-asset/axios": "^1",
-        "npm-asset/caman": "^4.1",
-        "npm-asset/chart.js": "^2.7",
-        "npm-asset/vue": "^2.5",
-        "npm-asset/vue-chartjs": "3.5.1",
-        "npm-asset/vue-router": "^3.0",
-        "oomphinc/composer-installers-extender": "^2",
-        "composer/installers": "^2",
-        "anthonymartin/geo-location": "^1.0",
-        "drupal/address": "~1.0",
-        "drupal/pathauto": "^1",
-        "drupal/restui": "^1",
-        "drupal/token": "^1.9",
-        "drupal/ctools": "3.x-dev",
-        "drupal/image_effects": "^3.5",
-        "drupal/layout_library": "^1.0@beta",
-        "drupal/lazy": "^3.0",
-        "drupal/paragraphs": "^1.2",
-        "drupal/entity_reference_revisions": "^1.9",
-        "drupal/diff": "^1.0",
-        "drupal/exif_orientation": "^1",
-        "drupal/field_group": "^4",
-        "drupal/geolocation": "^3",
-        "drupal/media_parent_entity_link": "^1.0",
-        "drupal/metatag": "^1.16",
-        "drupal/services_api_key_auth": "dev-3.0.x",
-        "drupal/search_api": "^1.5",
-        "drupal/views_infinite_scroll": "^2",
-        "drupal/color_field": "^3",
-        "drupal/field_permissions": "^1.1",
-        "drupal/field_formatter_class":"^1.0",
-        "drupal/inline_entity_form": "^1.0@RC",
-        "drupal/shs": "^2"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "extra": {
-        "installer-types": [
-            "bower-asset",
-            "npm-asset"
-        ],
-        "installer-paths": {
-            "web/libraries/maplibre-gl": [
-              "npm-asset/maplibre-gl"
-            ],
-            "web/libraries/mapbox-gl": [
-              "npm-asset/@mapbox/mapbox-gl"
-            ],
-            "web/core": [
-                "type:drupal-core"
-            ],
-            "web/libraries/{$name}": [
-                "type:drupal-library",
-                "type:bower-asset",
-                "type:npm-asset"
-            ],
-            "web/modules/contrib/{$name}": [
-                "type:drupal-module"
-            ],
-            "web/profiles/contrib/{$name}": [
-                "type:drupal-profile"
-            ],
-            "web/themes/contrib/{$name}": [
-                "type:drupal-theme"
-            ],
-            "drush/contrib/{$name}": [
-                "type:drupal-drush"
-            ]
-        },
-        "enable-patching": true,
-        "patches": {
-            "drupal/core": {
-                "Translate field group": "https://www.drupal.org/files/issues/2022-09-19/2546212-193.patch"
-            }
-        }
+  "name": "drupal/markaspot",
+  "description": "Installation profile of the Mark-a-Spot D8 Distribution",
+  "type": "drupal-profile",
+  "license": "GPL-2.0-or-later",
+  "homepage": "https://github.com/markaspot/markaspot.git",
+  "authors": [
+    {
+      "name": "Holger Kreis (markaspot)",
+      "homepage": "https://www.drupal.org/u/markaspot",
+      "role": "Maintainer"
     }
+  ],
+  "repositories": [
+    {
+      "type": "composer",
+      "url": "https://packages.drupal.org/8"
+    },
+    {
+      "type": "composer",
+      "url": "https://asset-packagist.org"
+    },
+    {
+      "type": "package",
+      "package": {
+        "name": "npm-asset/maplibre--maplibre-gl-style-spec",
+        "version": "23.3.0",
+        "type": "npm-asset",
+        "dist": {
+          "url": "https://registry.npmjs.org/@maplibre/maplibre-gl-style-spec/-/maplibre-gl-style-spec-23.3.0.tgz",
+          "type": "tar"
+        }
+      }
+    },
+    {
+      "type": "package",
+      "package": {
+        "name": "npm-asset/earcut",
+        "version": "3.0.1",
+        "type": "npm-asset",
+        "dist": {
+          "url": "https://registry.npmjs.org/earcut/-/earcut-3.0.1.tgz",
+          "type": "tar"
+        }
+      }
+    },
+    {
+      "type": "package",
+      "package": {
+        "name": "npm-asset/mapbox-gl",
+        "version": "3.16.0-beta.2",
+        "type": "npm-asset",
+        "dist": {
+          "url": "https://registry.npmjs.org/mapbox-gl/-/mapbox-gl-3.16.0-beta.2.tgz",
+          "type": "tar"
+        }
+      }
+    }
+  ],
+  "require": {
+    "npm-asset/leaflet.locatecontrol": "^0.65",
+    "npm-asset/fontawesome-iconpicker": "^1.3",
+    "npm-asset/waypoints": "^4",
+    "npm-asset/iso8601-js-period": "^0.2",
+    "npm-asset/dateformat": "^5",
+    "npm-asset/lazysizes": "^5",
+    "npm-asset/leaflet": "1.7",
+    "npm-asset/leaflet.timeline": "^1.4",
+    "npm-asset/leaflet.heat": "^0.2.0",
+    "npm-asset/leaflet.markercluster": "^1.4",
+    "npm-asset/leaflet-fullscreen": "^1",
+    "npm-asset/leaflet-edgebuffer": "^1",
+    "npm-asset/leaflet-easybutton": "^2.4",
+    "npm-asset/leaflet-control-geocoder": "^1",
+    "npm-asset/leaflet-geosearch": "^3.6",
+    "npm-asset/mapbox--geojson-rewind": "^0.5.0",
+    "npm-asset/drmonty-leaflet-awesome-markers": "2.0.2",
+    "npm-asset/mapbox-gl-leaflet": "^0.0.15",
+    "npm-asset/maplibre--maplibre-gl-leaflet": "^0.0.20",
+    "npm-asset/maplibre-gl": "^5",
+    "npm-asset/mapbox-gl": "3.16.0-beta.2",
+    "npm-asset/font-awesome": "^5",
+    "npm-asset/axios": "^1",
+    "npm-asset/caman": "^4.1",
+    "npm-asset/chart.js": "^2.7",
+    "npm-asset/vue": "^2.5",
+    "npm-asset/vue-chartjs": "3.5.1",
+    "npm-asset/vue-router": "^3.0",
+    "oomphinc/composer-installers-extender": "^2",
+    "composer/installers": "^2",
+    "anthonymartin/geo-location": "^1.0",
+    "drupal/address": "~1.0",
+    "drupal/pathauto": "^1",
+    "drupal/restui": "^1",
+    "drupal/token": "^1.9",
+    "drupal/ctools": "3.x-dev",
+    "drupal/image_effects": "^3.5",
+    "drupal/layout_library": "^1.0@beta",
+    "drupal/lazy": "^3.0",
+    "drupal/paragraphs": "^1.2",
+    "drupal/entity_reference_revisions": "^1.9",
+    "drupal/diff": "^1.0",
+    "drupal/exif_orientation": "^1",
+    "drupal/field_group": "^4",
+    "drupal/geolocation": "^3",
+    "drupal/media_parent_entity_link": "^1.0",
+    "drupal/metatag": "^1.16",
+    "drupal/services_api_key_auth": "dev-3.0.x",
+    "drupal/search_api": "^1.5",
+    "drupal/views_infinite_scroll": "^2",
+    "drupal/color_field": "^3",
+    "drupal/field_permissions": "^1.1",
+    "drupal/field_formatter_class": "^1.0",
+    "drupal/inline_entity_form": "^1.0@RC",
+    "drupal/shs": "^2"
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "extra": {
+    "installer-types": [
+      "bower-asset",
+      "npm-asset"
+    ],
+    "installer-paths": {
+      "web/libraries/maplibre-gl": [
+        "npm-asset/maplibre-gl"
+      ],
+      "web/libraries/mapbox-gl": [
+        "npm-asset/mapbox-gl"
+      ],
+      "web/core": [
+        "type:drupal-core"
+      ],
+      "web/libraries/{$name}": [
+        "type:drupal-library",
+        "type:bower-asset",
+        "type:npm-asset"
+      ],
+      "web/modules/contrib/{$name}": [
+        "type:drupal-module"
+      ],
+      "web/profiles/contrib/{$name}": [
+        "type:drupal-profile"
+      ],
+      "web/themes/contrib/{$name}": [
+        "type:drupal-theme"
+      ],
+      "drush/contrib/{$name}": [
+        "type:drupal-drush"
+      ]
+    },
+    "enable-patching": true,
+    "patches": {
+      "drupal/core": {
+        "Translate field group": "https://www.drupal.org/files/issues/2022-09-19/2546212-193.patch"
+      }
+    }
+  }
 }
