refactor: separate map config for headless setups, make markaspot_map optional
- Remove markaspot_map from required dependencies
- Add markaspot_nuxt as required dependency (provides essential API endpoints)

--- a/markaspot.info.yml
+++ b/markaspot.info.yml
@@ -58,7 +58,7 @@ dependencies:
   - user
   - views
   - markaspot_open311
-  - markaspot_map
+  - markaspot_nuxt
   - markaspot_media
   - markaspot_token
   - markaspot_request_id
