refactor: enhance node display in gin theme

--- a/modules/markaspot_ui/markaspot_ui.libraries.yml
+++ b/modules/markaspot_ui/markaspot_ui.libraries.yml
@@ -15,3 +15,11 @@ settings:
       css/markaspot-settings.css: {}
   dependencies:
     - core/drupal
+
+node_view:
+  version: VERSION
+  css:
+    theme:
+      css/markaspot-node-view.css: {}
+  dependencies:
+    - core/drupal
