--- a/modules/service_request/service_request.info.yml
+++ b/modules/service_request/service_request.info.yml
@@ -11,6 +11,8 @@ dependencies:
   - address
   - color_field
   - field_permissions
+  - field_formatter_class
+  - field_group
   - image
   - image_effects
   - file
@@ -18,6 +20,8 @@ dependencies:
   - paragraphs
   - entity_reference_revisions
   - fa_icon_class
+  - geolocation
+  - geolocation_nominatim
 
 config_devel:
   - core.view_display.node.service_request.default
