feat (markaspot_ui): add configurable login redirect with password reset protection
Add optional post-login redirect feature that can be enabled in markaspot_ui settings.
Users are redirected to a configurable path (default: /admin/content/management) after  successful login, except during password reset flow where Drupal core's redirect is preserved.

--- a/modules/markaspot_ui/markaspot_ui.services.yml
+++ b/modules/markaspot_ui/markaspot_ui.services.yml
@@ -18,3 +18,9 @@ services:
     arguments: ['@current_user', '@logger.channel.markaspot_ui', '@config.factory']
     tags:
       - { name: event_subscriber }
+
+  markaspot_ui.login_redirect_subscriber:
+    class: Drupal\markaspot_ui\EventSubscriber\LoginRedirectSubscriber
+    arguments: ['@config.factory', '@current_user', '@request_stack']
+    tags:
+      - { name: event_subscriber }
