feat: add configuration UI for passwordless authentication

--- a/modules/markaspot_passwordless/markaspot_passwordless.routing.yml
+++ b/modules/markaspot_passwordless/markaspot_passwordless.routing.yml
@@ -41,3 +41,11 @@ markaspot_passwordless.user_status:
   options:
     _auth: ['cookie', 'basic_auth']
     no_cache: 'TRUE'
+
+markaspot_passwordless.settings:
+  path: '/admin/config/system/markaspot-passwordless'
+  defaults:
+    _form: '\Drupal\markaspot_passwordless\Form\PasswordlessSettingsForm'
+    _title: 'Passwordless Authentication Settings'
+  requirements:
+    _permission: 'administer site configuration'
