--- a/modules/markaspot_passwordless/markaspot_passwordless.services.yml
+++ b/modules/markaspot_passwordless/markaspot_passwordless.services.yml
@@ -10,3 +10,6 @@ services:
       - '@plugin.manager.mail'
       - '@current_user'
       - '@logger.channel.markaspot_passwordless'
+      - '@config.factory'
+      - '@entity_type.manager'
+      - '@language_manager'
