feat: add bbox caching module

--- a/markaspot.info.yml
+++ b/markaspot.info.yml
@@ -59,6 +59,7 @@ dependencies:
   - user
   - views
   - markaspot_open311
+  - markaspot_bbox_cache
   - markaspot_nuxt
   - markaspot_media
   - markaspot_token
