feat(api): add stats endpoints and group module integration
- Add /georeport/v2/stats.json and /georeport/v2/stats/categories.json endpoints
- Add Group module as profile dependency for organisation/jurisdiction support
- Enhance sorting with JSON:API style (-created for DESC)
- Use Drupal entity access API instead of manual permission checks

--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
         "drupal/gin": "^5",
         "drupal/gin_login": "^2.1",
         "drupal/gin_toolbar": "^3",
+        "drupal/group": "^3",
         "drupal/address": "~2",
         "drupal/pathauto": "^1",
         "drupal/restui": "^1",
