fix: update group types names to be installed via cim

--- a/config/optional/field.field.node.service_request.field_jurisdiction.yml
+++ b/config/optional/field.field.node.service_request.field_jurisdiction.yml
@@ -4,7 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_jurisdiction
-    - group.type.jurisdiction
+    - group.type.jur
     - node.type.service_request
   module:
     - group
@@ -22,7 +22,7 @@ settings:
   handler: 'default:group'
   handler_settings:
     target_bundles:
-      jurisdiction: jurisdiction
+      jur: jur
     sort:
       field: _none
     auto_create: false
