fix(profile): update group role configs for Group 3.x compatibility

--- a/config/optional/group.role.jur-admin.yml
+++ b/config/optional/group.role.jur-admin.yml
@@ -1,4 +1,4 @@
-uuid: c3456789-abcd-ef01-2345-6789abcdef01
+uuid: a0394bec-ac0d-434a-82c2-4a4f55cbdedc
 langcode: en
 status: true
 dependencies:
@@ -9,10 +9,10 @@ dependencies:
 id: jur-admin
 label: Administrator
 weight: -100
-internal: false
-audience: member
+admin: true
+scope: individual
+global_role: null
 group_type: jur
-permissions_ui: true
 permissions:
   - 'administer group'
   - 'edit group'
