--- a/config/optional/group.role.org-admin.yml
+++ b/config/optional/group.role.org-admin.yml
@@ -1,4 +1,4 @@
-uuid: a1234567-89ab-cdef-0123-456789abcdef
+uuid: 29139974-bd69-4e21-bae7-79731be740c9
 langcode: en
 status: true
 dependencies:
@@ -9,10 +9,10 @@ dependencies:
 id: org-admin
 label: Administrator
 weight: -100
-internal: false
-audience: member
+admin: true
+scope: individual
+global_role: null
 group_type: org
-permissions_ui: true
 permissions:
   - 'administer group'
   - 'edit group'
