refactor(group): replace PBF with Group module access control
- Remove PBF dependency and legacy hooks
- Add Group module configs (types, roles, relationships)
- Add field_nuxt_config for jurisdiction settings
- Add markaspot_group as profile dependency

--- a/markaspot.info.yml
+++ b/markaspot.info.yml
@@ -67,6 +67,7 @@ dependencies:
   - markaspot_request_id
   - markaspot_validation
   - markaspot_icons
+  - markaspot_group
   - service_request
 
 themes:
