fix: update config for group, nuxt and translation

--- a/modules/markaspot_default_content/migrations/migrate_plus.migration.markaspot_migrate_default_content_block.yml
+++ b/modules/markaspot_default_content/migrations/migrate_plus.migration.markaspot_migrate_default_content_block.yml
@@ -7,8 +7,11 @@ source:
   header_row_count: 1
   ids: [uuid]
 process:
-  title: title
+  info: title
   uuid: uuid
+  langcode:
+    plugin: default_value
+    default_value: en
   body/value: body
   body/format:
     plugin: default_value
