--- a/modules/markaspot_default_content/migrations/migrate_plus.migration.markaspot_migrate_default_content_page.yml
+++ b/modules/markaspot_default_content/migrations/migrate_plus.migration.markaspot_migrate_default_content_page.yml
@@ -5,8 +5,12 @@ source:
   plugin: csv
   path: /artifacts/page.csv
   header_row_count: 1
-  ids: [title]
+  ids: [uuid]
 process:
+  uuid: uuid
+  langcode:
+    plugin: default_value
+    default_value: en
   title: title
   body/value: body
   body/format:
@@ -15,4 +19,4 @@ process:
 destination:
   plugin: 'entity:node'
   default_bundle: page
-migration_dependencies: {} # Add this line
+migration_dependencies: {}
