feat: add nuxt config into a plugin schema for json_form_widget module

--- a/modules/markaspot_nuxt/markaspot_nuxt.info.yml
+++ b/modules/markaspot_nuxt/markaspot_nuxt.info.yml
@@ -3,3 +3,5 @@ type: module
 description: 'Exposes Mark-a-Spot configuration and data to Nuxt frontend via JSON API endpoints with independent map configuration'
 package: Mark-a-Spot
 core_version_requirement: ^10 || ^11
+dependencies:
+  - json_form_widget:json_form_widget
