feat(nuxt): migrate boundary and CSS fields to string_long
- Change field_boundary from text_long to string_long
- Change field_custom_css from text_long to string_long
- Add CodeMirror Editor widget for JSON/CSS syntax highlighting
- Remove text format dependency (no more HTML wrapper issues)
- Add drupal/codemirror_editor to profile dependencies

--- a/composer.json
+++ b/composer.json
@@ -71,7 +71,8 @@
         "drupal/field_formatter_class": "^1.0",
         "drupal/iconify_field": "^1.2",
         "drupal/inline_entity_form": "^3",
-        "drupal/shs": "^3"
+        "drupal/shs": "^3",
+        "drupal/codemirror_editor": "^2"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
