feat(api): add jurisdiction slug routing and group filtering
- Add field_slug support to MarkASpotSettingsController
- Add gid and jurisdiction parameters to GeoReport API
- Add resolveJurisdictionId() for slug-to-gid lookup
- Add getNodeIdsInGroup() for filtering by group
- Return relative file paths for fonts/logos (frontend proxy)

--- a/composer.json
+++ b/composer.json
@@ -71,8 +71,7 @@
         "drupal/field_formatter_class": "^1.0",
         "drupal/iconify_field": "^1.2",
         "drupal/inline_entity_form": "^3",
-        "drupal/shs": "^3",
-        "drupal/codemirror_editor": "^2"
+        "drupal/shs": "^3"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
